--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-/*csslint known-properties:false, order-alphabetical: false*/
+/*csslint order-alphabetical: false*/
 
 /* CSSLint */
 
 .fo-menu {
-    height: 80px;
     background-color: aqua;
+    height: 80px;
 }
 
 .menupont {
@@ -37,6 +37,13 @@
 .tartalom {
     background-color: lightgrey;
     height: 1000px;  /*ez csak azért kell hogy a scrollbar megjelenjen */
+    
+    /* bizonoyos css property-ket nem ajánlott használni, mert nem minden böngésző */
+    /* ismeri. Ezt a caniuse.com weboldalon ellenőrizhetjük */
+    /* https://caniuse.com/#search=zoom */
+    /* pl zoom nem működik firefoxban!!! */
+    /* zoom: 0.1; */
 
 }
 
+/* #learnabout box-modell https://www.w3schools.com/css/css_boxmodel.asp */
