css float, többszintű selectorok

--- a/03_css_basics.css
+++ b/03_css_basics.css
@@ -1,5 +1,4 @@
 /*csslint order-alphabetical: false*/
-
 /* CSSLint */
 
 .fo-menu {
@@ -7,7 +6,8 @@
     height: 80px;
 }
 
-.menupont {
+/* ez a fo-menu classon belüli menüpont class-okat választja ki */
+.fo-menu .menupont {
     height: 40px;
     /* körbe mindenhol 10px a magrin */
     /* margin: 10px; */
@@ -19,11 +19,13 @@
 
     /* az előző három sor rövidítve így néz ki:  */
     margin: 10px 0 10px 10px;  /* fölül, jobbra, alul, balra */
-
     background-color: blue;
     color: white;
+    /* ez a css property megváltoztatja a html elem alapértelmezett működését, jelen esetben */
+    /* egy block szintű elem (div)-ből inline elem-et csinál, de a block tulajdonságait is megőrzi */
+    /* azaz, reagálni fog az elem a width, és height paraméterekre */
+    /* read more: https://www.w3schools.com/css/css_inline-block.asp */
     display: inline-block;
-
 
     /* padding-top: 22px; */
     /* padding-left: 10px; */
@@ -34,16 +36,35 @@
     padding: 22px 10px 0 10px; /* fölül, jobbra, alul, balra */
 }
 
+.al-menu { 
+    margin-top: 20px;
+    /* jobbra rendezzük az almenüt */
+    float: right;
+
+}
+
+.al-menu .menupont {
+    display: inline-block;
+    margin-left: 10px;
+    text-decoration: underline;
+}
+
+/* ha a menüpont fölé visszük az egeret, akkor bekékül az adott menüpont */
+/* touch-screen-en NINCS hover!! */
+.al-menu .menupont:hover {
+    color: blue;
+}
+
+
 .tartalom {
     background-color: lightgrey;
+    margin-top: 40px;
     height: 1000px;  /*ez csak azért kell hogy a scrollbar megjelenjen */
-    
     /* bizonoyos css property-ket nem ajánlott használni, mert nem minden böngésző */
     /* ismeri. Ezt a caniuse.com weboldalon ellenőrizhetjük */
     /* https://caniuse.com/#search=zoom */
     /* pl zoom nem működik firefoxban!!! */
     /* zoom: 0.1; */
-
 }
 
 /* #learnabout box-modell https://www.w3schools.com/css/css_boxmodel.asp */
