--- a/03_css_basics.css
+++ b/03_css_basics.css
@@ -53,6 +53,8 @@
 /* touch-screen-en NINCS hover!! */
 .al-menu .menupont:hover {
     color: blue;
+    /* átalakítja az egér mutatóját kis kézre */
+    cursor: pointer;
 }
 
 
@@ -68,3 +70,23 @@
 }
 
 /* #learnabout box-modell https://www.w3schools.com/css/css_boxmodel.asp */
+
+
+.fixed-doboz {
+    width: 100%;
+    height: 50px;
+    background-color: blue;
+    color: white;
+    /* a position fixed, kiszedi az elemet a document flow-ból, és egy fix helyre beteszi */
+    /* a többi elem számára ez az elem nem lesz látható */
+    position:fixed;
+    /* ezek csak akkor működnek ha a position: fixed be van állítva */
+    top:0;
+    right:0;
+}
+
+
+
+
+
+
